Task 2: Upgrade Java project to Java 21.